fix: biome format

--- a/biome.json
+++ b/biome.json
@@ -31,8 +31,5 @@
       }
     }
   },
-  "extends": [
-    "ultracite/core",
-    "ultracite/react"
-  ]
+  "extends": ["ultracite/core", "ultracite/react"]
 }
