--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "prebuild": "biome check . --write",
     "build": "tsc -b && vite build",
     "lint": "biome check . --write",
     "preview": "vite preview",
@@ -40,6 +41,7 @@
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
     "ultracite": "6.3.6",
