--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["!src/components/ui"]
+    "includes": ["!**/src/components/ui"]
   },
   "formatter": {
     "enabled": true,
@@ -16,7 +16,10 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true
+      "recommended": true,
+      "suspicious": {
+        "useBiomeIgnoreFolder": "error"
+      }
     }
   },
   "javascript": {
