--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["!**/src/components/ui"]
+    "includes": ["!**/src/components/ui", "!**/src/components/animate-ui"]
   },
   "formatter": {
     "enabled": true,
